add contact section

--- a/assets/css/Projects.css
+++ b/assets/css/Projects.css
@@ -29,6 +29,10 @@
 
     margin: 20px;
 
+    /*background-image: url("/assets/img/Screenshot (256).png");*/
+    /*background-size:cover;*/
+    /*background-position:center;*/
+
 }
 
 .lanList{
