--- a/assets/css/Contact.css
+++ b/assets/css/Contact.css
@@ -2,6 +2,9 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    background-image: url("../img/world.svg");
+    background-size:cover;
+    background-position:center;
 }
 
 .contactContainer {
@@ -9,6 +12,7 @@
     width: 100%;
 
     position: relative;
+
 }
 
 .contactContainer .contactTitle{
@@ -20,7 +24,14 @@
 
 .form{
     grid-area: form;
-    background-color: white;
+    /*background-color: white;*/
+    background: transparent;
+}
+
+.form input ,
+.form textarea{
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
 }
 .map{
     grid-area: map;
@@ -148,6 +159,18 @@
     height: 100%;
 }
 
+svg path{
+    fill: #4f0000;
+    stroke: #eee;
+    stroke-width: .25;
+}
+
+svg path:hover{
+    fill: #840000;
+    transition: 0.6s;
+    cursor: pointer;
+}
+
 
 @media all and (max-width: 970px){
     .inputContainer{
@@ -188,5 +211,15 @@
     }
     .info{
         padding: 0!important;
+    }
+}
+
+@media all and (max-width: 300px) {
+    .info{
+        font-size: 13px!important;
+    }
+
+    .form {
+        padding: 0px!important;
     }
 }
