--- a/assets/css/Contact.css
+++ b/assets/css/Contact.css
@@ -32,6 +32,7 @@
 .form textarea{
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(20px);
+    color: white;
 }
 .map{
     grid-area: map;
