--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -160,7 +160,7 @@
     padding: 10px;
     width: max-content;
     font-size: 1em;
-    letter-spacing: 10px;
+    letter-spacing: 1px;
 }
 
 .arrow{
@@ -203,5 +203,48 @@
 
     100%{
         background-position: 500%;
+    }
+}
+
+@media all and (max-width: 1022px){
+    .socialMedia a{
+        font-size: 25px;
+    }
+}
+
+@media all and (max-width: 722px) {
+    .imgBox{
+        width: 100vh;
+    }
+    .txtContainer{
+        bottom: -12%;
+    }
+
+}
+
+@media all and (max-width: 768px){
+    .socialMedia a{
+        font-size: 20px;
+    }
+}
+
+@media all and (max-width: 510px){
+    .txtContainer{
+        bottom: -20%;
+    }
+}
+
+@media all and (max-width: 490px){
+    .border{
+        border: 3px solid #F3062E;
+    }
+    .wrapper{
+        display: none;
+    }
+}
+
+@media all and (max-width: 375px){
+    .txtContainer{
+        bottom: -25%;
     }
 }
