--- a/assets/css/Projects.css
+++ b/assets/css/Projects.css
@@ -8,10 +8,12 @@
 }
 
 .projectContainer h3{
+    position: relative;
     font-family: 'Montserrat', Arial, sans-serif;
-    color: white;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, 0.6);
+    /*-webkit-background-clip: text;*/
+    /*-webkit-text-fill-color: rgba(255,255,255,.5);*/
+
 }
 
 .cardP{
@@ -25,15 +27,25 @@
     width: 250px;
     height: 350px;
 
-    border: 1px dotted red;
+    border: 1px solid red;
 
     margin: 20px;
 
-    /*background-image: url("/assets/img/Screenshot (256).png");*/
-    /*background-size:cover;*/
-    /*background-position:center;*/
+    background-color: #1f1f1f;
+    transition: all 0.3s ease;
 
 }
+
+.cardTitle>h3{
+    transition: color 0.5s ease;
+}
+
+.cardP:hover .cardTitle>h3{
+    color: crimson!important;
+}
+/*.cardP:hover {*/
+/*    transform: scale(1.1)!important;*/
+/*}*/
 
 .lanList{
     display: flex;
@@ -102,7 +114,11 @@
 
 .cardTitle{
     margin-top: 0;
-    margin-bottom: auto;
+    margin-bottom: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cardP i:before {
@@ -111,15 +127,23 @@
 
 }
 
-/*@keyframes iconAniem {*/
-/*    0%{*/
-/*        */
-/*    }*/
+.imgWrapper{
+    width: 100%;
+    height: 150px;
+    margin-top: auto;
+    margin-bottom: auto;
+    transition: all 1s ease-in-out;
+}
 
-/*    10%{*/
-/*        width: 100%;*/
-/*        height: 10%;*/
-/*        color: #DC143C;*/
-/*    }*/
+.imgWrapper img{
+    width: 100%;
+    height: 100%;
+    background-size:cover;
+    background-position:center;
+}
+
+/*.imgWrapper:hover {*/
+/*    transform: scale(1.5)!important;*/
+/*    z-index: 1000;*/
 /*}*/
 
