--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -12,7 +12,7 @@
     padding: 0;
     /*margin: 50px 0px 0px;*/
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     position: relative;
 }
