--- a/assets/css/Contact.css
+++ b/assets/css/Contact.css
@@ -20,6 +20,24 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    color: rgba(255, 255, 255, 0.65);
+}
+
+.subTitel{
+    color: rgba(255, 255, 255, 0.65);
+}
+
+#tel{
+    color: white;
+}
+
+#emailLink:hover,#tel:hover{
+    color: crimson;
+}
+
+.info>h3{
+    color: rgba(255, 255, 255, 0.65);
+    margin-bottom: 10px;
 }
 
 .form{
@@ -113,6 +131,14 @@
     background-color: #F3062E;
     border: none;
     color: white;
+    cursor: pointer;
+    transition: 0.5s all ease;
+}
+
+#submitBtn:hover{
+    transform: scale(1.1);
+    background-color: black;
+    color: #F3062E;
 }
 
 
